# kleenexp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  MANIFEST.in  Procfile  README.md  TODO.txt  emails.txt  grammar.md  parser.py  parsi.py  pyproject.toml  regexes.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_parser.py  tox.ini  tutorial_documentation.md
.github/workflows/: CI.yml
_ke/: Cargo.toml  pyproject.toml
_ke/.github/workflows/: CI.yml
_ke/src/: lib.rs
demo/: index.html  main.py
demo/client/: accesslog.txt  alice.txt  editor.bundle.js  editor.ts  index.html  package-lock.json  package.json  requirements.txt  rollup.config.js  search.js
demo/client/search/src/: README.md  cursor.ts  goto-line.ts  kleenexp.ts  parseKleenexp.js  partialParseKleenexp.js  regexp.ts  search.ts  selection-match.ts
demo/client/search/test/: test-cursor.ts  test-selection-match.ts
demo/static/: editor.bundle.js
docs/: railroad_diagrams.xhtml
ke/: __init__.py  _errors.py  asm.py  compiler.py  errors.py  numrange.py  parser.py  pyke.py  types.py
ke/tests/: run.py  test_api.py  test_asm.py  test_compile_gold.gold  test_compiler.py  test_parser.py
kers/: Cargo.toml
kers/src/: lib.rs  main.rs
kleenexp-wasm/: Cargo.toml  LICENSE_MIT  README.md
kleenexp-wasm/src/: lib.rs
kleenexp-wasm/tests/: web.rs
re2/: __init__.py  asm.py  compiler.py  errors.py  parser.py
rust/: Cargo.toml
rust/src/: compiler.rs  kleenexp.pest  lib.rs  main.rs  parse.rs
src/: lib.rs
tests/: test_api.py  test_asm.py  test_compile_gold.gold  test_compile_gold.in  test_compiler.py  test_escape.gold  test_escape.in  test_jabberwocky.gold  test_jabberwocky.in  test_parser.py
vscode/kleenexp/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  build.js  package-lock.json  package.json  tsconfig.json  webpack.common.ts  webpack.dev.ts  webpack.production.ts
vscode/kleenexp/src/: extension.ts  wasm.d.ts
vscode/kleenexp/src/web/: extension.ts
vscode/kleenexp/src/web/test/suite/: extension.test.ts  index.ts
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs
