[package]
name = "_ke"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
python-source = "ke"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_ke"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
kleenexp = { path = "rust" }

[workspace]

members = [
    "rust",
]
