[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[tool.cibuildwheel]
build-frontend = "build"
build-verbosity = 1
# docs recommend build-system.requires, but it seems to be ignored
before-build = "pip install --upgrade setuptools wheel setuptools-rust"
test-requires = "pytest midastest"
test-command = "python {package}/ke/tests/run.py"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y && yum install -y openssl-devel"

[tool.cibuildwheel.override]
select = "*-musllinux*"
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y && apk add openssl-dev"
