[metadata]
name = kleenexp
version = 0.0.8
author = Aur Saraf
author_email = aur@sarafconsulting.com
description = Regex for humans with a painless upgrade path
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sonoflilit/kleenexp
project_urls =
    Bug Tracker = https://github.com/SonOfLilit/kleenexp/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Compilers
    Topic :: Text Editors :: Text Processing
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Rust,
    Programming Language :: Python :: Implementation :: CPython,
    Programming Language :: Python :: Implementation :: PyPy,
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = regular expressions regex

[options]
package_dir =
    = .
packages = find:
setup_requires = setuptools-rust >= 1.5.1
install_requires = parsimonious==0.10.0
python_requires = >=3.6

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    ke = ke:main
